--- a/wp-content/themes/aait-theme/content/sass/abstract/_generic.scss
+++ b/wp-content/themes/aait-theme/content/sass/abstract/_generic.scss
@@ -8,6 +8,10 @@ body {
   // background-image: url('../images/body-bgsvg.svg');
 }
 
+[dir="ltr"] body {
+  direction: ltr;
+}
+
 // GLOBAL STYLE FOR ALL TEXT
 .text {
   color: $textColor;
