--- a/wp-content/themes/aait-theme/content/sass/components/_icon-scroll.scss
+++ b/wp-content/themes/aait-theme/content/sass/components/_icon-scroll.scss
@@ -1,9 +1,10 @@
+// FOR MOUSE ANIMATING SHAPE
 .icon-scroll {
   width: 40px;
   height: 70px;
   margin-left: -20px;
   bottom: 10%;
-  margin-top: -35px;
+  margin-block-start: -35px;
   box-shadow: inset 0 0 0 1px $pageColor;
   border-radius: 25px;
   z-index: 5;
