--- a/wp-content/themes/aait-theme/content/sass/components/_search-div.scss
+++ b/wp-content/themes/aait-theme/content/sass/components/_search-div.scss
@@ -1,9 +1,7 @@
 .search-div {
   position: fixed;
-  inset-inline-start: 0;
-  inset-inline-end: 0;
-  inset-inline-start: 0;
-  inset-inline-end: 0;
+  inset-inline: 0;
+  inset-block: 0;
   width: 100%;
   height: 100%;
   background: #000000f0;
