--- a/wp-content/themes/aait-theme/content/sass/layout/_fixed-navbar.scss
+++ b/wp-content/themes/aait-theme/content/sass/layout/_fixed-navbar.scss
@@ -3,14 +3,12 @@
 
   &.fixed {
     position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
+    inset-block-start: 0;
+    inset-inline: 0;
     width: 100%;
     z-index: 99;
     background-color: #fff;
     box-shadow: 0px 0px 3px 3px #00000030;
     margin-bottom: 20px;
-
   }
 }
