--- a/wp-content/themes/aait-theme/content/sass/layout/_navbar-mobile.scss
+++ b/wp-content/themes/aait-theme/content/sass/layout/_navbar-mobile.scss
@@ -11,7 +11,7 @@
   height: 100%;
   transition: all 1s ease-in-out;
   text-align: start;
-  border-left: 4px solid $pageColoer;
+  border-left: 4px solid $pageColor;
   z-index: 99999;
   // position: relative;
 
@@ -23,6 +23,7 @@
     height: 100%;
     background-color: #000000b3;
     z-index: 0;
+
     opacity: 0;
     visibility: hidden;
     transition: $transition7;
