Added whiteText variable , bootstrap heading style in public-classes file and cursor pointer on buttons , removed navbar.scss from components , replaced (top,bottom,left,right:0) with inset:0 , added more responsive breakpoints to owl carousel js , standardized font-size:16px , added font-size variable and used it in body in generic

--- a/wp-content/themes/aait-theme/content/sass/abstract/_placeholders.scss
+++ b/wp-content/themes/aait-theme/content/sass/abstract/_placeholders.scss
@@ -18,9 +18,9 @@
     size: cover;
   }
 }
-%text{
+%text {
   color: $textColor;
-  font-family: $fontFamily;
+  // font-family: $fontFamily;
   line-height: 2;
   text-wrap: balance;
 }
