--- a/wp-content/themes/aait-theme/content/sass/components/_scroll-to-top.scss
+++ b/wp-content/themes/aait-theme/content/sass/components/_scroll-to-top.scss
@@ -13,6 +13,8 @@
   opacity: 0;
   transform: translateY(calc(100% + 20px));
   transition: $transition;
+  cursor: pointer;
+
   img {
     width: 25px;
   }
