--- a/wp-content/themes/aait-theme/content/sass/abstract/_generic.scss
+++ b/wp-content/themes/aait-theme/content/sass/abstract/_generic.scss
@@ -1,5 +1,6 @@
 body {
   font-family: $fontFamily;
+  font-size: $fontSize;
   direction: rtl;
   text-align: start;
   position: relative;
@@ -17,13 +18,13 @@ body {
 
 // TEXT FOR CARDS
 .text {
-  @extend %text; //EXTEND FROM RESET FILE 
+  @extend %text; //EXTEND FROM RESET FILE
   @include textTruncate();
 }
 
 // TEXT IN POST TYPE SINGLE PAGE
 .content-text {
-  @extend %text;//EXTEND FROM RESET FILE 
+  @extend %text; //EXTEND FROM RESET FILE
 }
 
 // DIV WRAP IMAGES AND VEDIOS
@@ -34,7 +35,7 @@ body {
     height: 100%;
     object-fit: cover;
   }
-  &.contain{
+  &.contain {
     object-fit: contain;
   }
 }
@@ -46,12 +47,7 @@ figure.image-wrap {
 // OVERLAY
 .overlay {
   position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  width: 100%;
-  height: 100%;
+  inset: 0;
   background-color: #0000007d;
   z-index: 3;
 }
@@ -87,7 +83,7 @@ figure.image-wrap {
     text-align: center;
 
     .title {
-      text-align: center;
+      // text-align: center;
       margin: 0 auto 20px auto;
       // color: $mainColor;
       font-size: 28px;
@@ -140,7 +136,6 @@ iframe {
 .padding-page {
   padding-block: 120px 50px;
 }
-
 
 // GLOBAL STYLES FOR CONTACT LINKS
 .contact {
