--- a/wp-content/themes/aait-theme/content/sass/components/_fixed-navbar.scss
+++ b/wp-content/themes/aait-theme/content/sass/components/_fixed-navbar.scss
@@ -3,12 +3,9 @@
 
   &.fixed {
     position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    width: 100%;
+    inset: 0;
+    inset-block-end: unset;
     z-index: 99;
     background-color: transparent;
-
   }
 }
