--- a/wp-content/themes/aait-theme/content/sass/components/_form.scss
+++ b/wp-content/themes/aait-theme/content/sass/components/_form.scss
@@ -1,12 +1,12 @@
-// STYLES FOR INPUTS 
-%input-styles{
+// STYLES FOR INPUTS
+%input-styles {
   background-color: transparent;
   min-height: 45px;
   padding: 10px;
   direction: inherit;
   border-radius: 6px;
   flex-direction: row-reverse;
-  font-size: 16px;
+  font-size: inherit;
   border: 1px solid $borderColor;
   // color: $textColor;
 }
@@ -34,134 +34,132 @@
     .input-wrap {
       margin-bottom: 20px;
 
-      input{
+      input {
         &:not([type="checkbox"]),
         &:not([type="submit"]) {
           @extend %input-styles;
-  
+        }
       }
-    }
       select,
       textarea {
-          @extend %input-styles;
-        }
-
-        &::-webkit-datetime-edit {
-          @include displayFlex($justify: flex-end, $gap: 0);
-        }
-
-        &::-webkit-calendar-picker-indicator {
-          flex: 3;
-        }
-
-        &:focus {
-          border: 2px solid $mainColor;
-        }
+        @extend %input-styles;
       }
 
-      input[type="submit"].main-btn {
-        background-color: $mainColor;
-        width: fit-content;
-        border: 1px solid $mainColor;
-        // border-radius: 0;
-        margin-bottom: 0;
-
-        &:hover {
-          background-color: #fff;
-          color: $mainColor;
-        }
+      &::-webkit-datetime-edit {
+        @include displayFlex($justify: flex-end, $gap: 0);
       }
 
-      // STYLING INPUT TYPE FILE
-      .file-wrap {
-        position: relative;
-        height: 45px;
-        margin-bottom: 15px;
-
-        .fake-file {
-          background-color: #fff;
-          min-height: 45px;
-          padding: 10px;
-          direction: inherit;
-          border-radius: 0;
-          flex-direction: row-reverse;
-          font-size: 18px;
-          border: 1px solid $borderColor;
-          position: absolute;
-          inset-block-start: 0;
-          z-index: 1;
-          width: 100%;
-          opacity: 1;
-          // background-image: url('../images/cv.png');
-          background-repeat: no-repeat;
-          background-position: left 1% center;
-          background-size: 25px;
-          color: $textColor;
-
-          &.hide {
-            opacity: 0;
-            transition: $transition;
-          }
-        }
-
-        input[type="file"] {
-          opacity: 0;
-          position: relative;
-          z-index: 2;
-
-          &::-webkit-file-upload-button {
-            display: none;
-          }
-
-          &.show {
-            opacity: 1;
-            transition: $transition;
-          }
-        }
+      &::-webkit-calendar-picker-indicator {
+        flex: 3;
       }
 
-      span {
-        label {
-          @include displayFlex($gap: 15px);
-
-          input[type="radio"] {
-            transform: scale(1.5);
-            font-size: 18px;
-          }
-        }
+      &:focus {
+        border: 2px solid $mainColor;
       }
     }
 
-    // ADD THIS CLASS TO STYLE LAYOUT
-    .wrap-flex {
-      @include displayFlex(row, flex-start, space-between, wrap, 0 20px);
+    input[type="submit"].main-btn {
+      background-color: $mainColor;
+      width: fit-content;
+      border: 1px solid $mainColor;
+      // border-radius: 0;
+      margin-bottom: 0;
 
-      .input-wrap {
-        flex: 1;
+      &:hover {
+        background-color: #fff;
+        color: $mainColor;
+      }
+    }
+
+    // STYLING INPUT TYPE FILE
+    .file-wrap {
+      position: relative;
+      height: 45px;
+      margin-bottom: 15px;
+
+      .fake-file {
+        background-color: #fff;
+        min-height: 45px;
+        padding: 10px;
+        direction: inherit;
+        border-radius: 0;
+        flex-direction: row-reverse;
+        font-size: 18px;
+        border: 1px solid $borderColor;
+        position: absolute;
+        inset-block-start: 0;
+        z-index: 1;
         width: 100%;
+        opacity: 1;
+        // background-image: url('../images/cv.png');
+        background-repeat: no-repeat;
+        background-position: left 1% center;
+        background-size: 25px;
+        color: $textColor;
+
+        &.hide {
+          opacity: 0;
+          transition: $transition;
+        }
       }
 
-      .wpcf7-checkbox {
-        @include displayFlex($align: flex-start, $wrap: wrap);
+      input[type="file"] {
+        opacity: 0;
+        position: relative;
+        z-index: 2;
 
-        .wpcf7-list-item {
-          flex: 1 1 45%;
+        &::-webkit-file-upload-button {
+          display: none;
+        }
 
-          label {
-            @include displayFlex($justify: unset);
-
-            input {
-              width: fit-content;
-              transform: scale(1.3);
-              accent-color: $mainColor;
-            }
-          }
+        &.show {
+          opacity: 1;
+          transition: $transition;
         }
       }
     }
 
-    br {
-      display: none;
+    span {
+      label {
+        @include displayFlex($gap: 15px);
+
+        input[type="radio"] {
+          transform: scale(1.5);
+          font-size: 18px;
+        }
+      }
     }
   }
 
+  // ADD THIS CLASS TO STYLE LAYOUT
+  .wrap-flex {
+    @include displayFlex(row, flex-start, space-between, wrap, 0 20px);
+
+    .input-wrap {
+      flex: 1;
+      width: 100%;
+    }
+
+    .wpcf7-checkbox {
+      @include displayFlex($align: flex-start, $wrap: wrap);
+
+      .wpcf7-list-item {
+        flex: 1 1 45%;
+
+        label {
+          @include displayFlex($justify: unset);
+
+          input {
+            width: fit-content;
+            transform: scale(1.3);
+            accent-color: $mainColor;
+          }
+        }
+      }
+    }
+  }
+
+  br {
+    display: none;
+  }
+}
