changes on theme

--- a/wp-content/themes/aait-theme/content/sass/abstract/_variables.scss
+++ b/wp-content/themes/aait-theme/content/sass/abstract/_variables.scss
@@ -67,7 +67,7 @@ $fontSize: 16px;
 /* COLORS VARIABLES */
 $mainColor: #336d32; // main site color
 $lightMainColor: #e6ca5533; // main site light color
-$secondaryColor: #777; // secondary site color
+$secColor: #777; // secondary site color
 $textColor: #7f7f7f; // main text color
 $borderColor: #a0a0a0; // main border color
 $pageColor: #fff; // site page background color
