--- a/wp-content/themes/aait-theme/content/sass/components/_icon-scroll.scss
+++ b/wp-content/themes/aait-theme/content/sass/components/_icon-scroll.scss
@@ -8,6 +8,7 @@
   box-shadow: inset 0 0 0 1px $pageColor;
   border-radius: 25px;
   z-index: 5;
+  cursor: pointer;
   &,
   &::before {
     position: absolute;
