--- a/wp-content/themes/aait-theme/content/sass/layout/_navbar.scss
+++ b/wp-content/themes/aait-theme/content/sass/layout/_navbar.scss
@@ -3,7 +3,6 @@
   // background-color: $mainColor;
   color: $mainColor;
   padding-block: 10px;
-
   .nav-flex {
     @include displayFlex($justify: space-between, $gap: 12px);
 
@@ -57,7 +56,7 @@
               font-family: "Font Awesome 5 Free";
               font-weight: 900;
               content: "\f107";
-              // margin: 0 5px;
+              font: var(--fa-font-solid);
               color: #aaaaaa;
             }
           }
@@ -103,6 +102,7 @@
                   font-family: "Font Awesome 5 Free";
                   font-weight: 900;
                   content: "\f104";
+                  font: var(--fa-font-solid);
                   margin: 0 5px;
                 }
               }
