edit text-wrap from balance to pretty

--- a/wp-content/themes/aait-theme/content/sass/abstract/_mixins.scss
+++ b/wp-content/themes/aait-theme/content/sass/abstract/_mixins.scss
@@ -37,5 +37,5 @@
   -webkit-line-clamp: $lines;
   max-width: $maxWidth;
   text-overflow: ellipsis;
-  text-wrap: balance;
+  text-wrap: pretty;
 }
