--- a/wp-content/themes/aait-theme/content/sass/style.css
+++ b/wp-content/themes/aait-theme/content/sass/style.css
@@ -168,7 +168,7 @@ body {
   -webkit-line-clamp: 2;
   max-width: 100%;
   text-overflow: ellipsis;
-  text-wrap: balance;
+  text-wrap: pretty;
 }
 
 .image-wrap img,
