--- a/wp-content/themes/aait-theme/content/sass/components/_buttons.scss
+++ b/wp-content/themes/aait-theme/content/sass/components/_buttons.scss
@@ -24,8 +24,8 @@
 
   &.reversed {
     background-color: transparent;
-    color: #fff;
-    border: 2px solid #fff;
+    color: $mainColor;
+    border: 2px solid $mainColor;
 
     &:hover {
       background-color: $mainColor;
