--- a/wp-content/themes/aait-theme/content/sass/abstract/_mixins.scss
+++ b/wp-content/themes/aait-theme/content/sass/abstract/_mixins.scss
@@ -2,7 +2,7 @@
 @mixin displayFlex(
   $direction: row,
   $align: center,
-  $justify: flex-start,
+  $justify: center,
   $wrap: nowrap,
   $gap: 20px
 ) {
